--- a/.github/workflows/remove-experimental.yml
+++ b/.github/workflows/remove-experimental.yml
@@ -39,14 +39,6 @@ jobs:
         with:
           role-to-assume: ${{ secrets.AWS_OIDC_ROLE_TO_ASSUME }}
           aws-region: us-east-1
-      # Check there are no parsers stacks being built
-      - name: Wait if any parsers are still getting built
-        uses: lewagon/wait-on-check-action@v1.3.1
-        with:
-          ref: ${{ github.ref }}
-          running-workflow-name: 'Deploy Experimental'
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          wait-interval: 10
       # Remove parsers
       - name: remove parsers
         env:
@@ -55,13 +47,18 @@ jobs:
           pushd solution/parser
           npm install serverless -g
           npm install
-          serverless remove --stage dev${PR} --config ./serverless-ecfr.yml
-          serverless remove --stage dev${PR} --config ./serverless-fr.yml
+          aws cloudformation describe-stacks --stack-name cmcs-eregs-parser-dev${PR} && \
+            aws cloudformation wait stack-create-complete --stack-name cmcs-eregs-parser-dev${PR} && \ 
+            serverless remove --stage dev${PR} --config ./serverless-ecfr.yml
+
+          aws cloudformation describe-stacks --stack-name cmcs-eregs-fr-parser-dev${PR} && \
+            aws cloudformation wait stack-create-complete --stack-name cmcs-eregs-fr-parser-dev${PR} && \ 
+            serverless remove --stage dev${PR} --config ./serverless-fr.yml
           popd
       # remove the regulations site
       - name: remove experimental regulations site server
       # If previous step fails the database will not be removed and you cannot rerun it
-      # In this instance we want to just remove the database so that we dont have 
+      # In this instance we want to just remove the database so that we dont have
       # to go into the database and do it manually.
       # If process is manually stopped it will not run this step.
         if: success() || failure()
@@ -72,7 +69,9 @@ jobs:
           npm install serverless -g
           npm install
           serverless invoke --config ./serverless-experimental.yml --function drop_database --stage dev${PR}
-          serverless remove --config ./serverless-experimental.yml --stage dev${PR}
+          aws cloudformation describe-stacks --stack-name cmcs-eregs-site-dev${PR} && \
+            aws cloudformation wait stack-create-complete --stack-name cmcs-eregs-site-dev${PR} && \ 
+            serverless remove --config ./serverless-experimental.yml --stage dev${PR} 
           popd
       # Remove the static assets
       - name: remove static assets
@@ -82,5 +81,7 @@ jobs:
           pushd solution/static-assets
           npm install serverless -g
           npm install
-          serverless remove --stage dev${PR}
+          aws cloudformation describe-stacks --stack-name cmcs-eregs-static-assets-dev${PR} && \
+            aws cloudformation wait stack-create-complete --stack-name cmcs-eregs-static-assets-dev${PR} 
+            serverless remove --stage dev${PR}
           popd
