--- a/.github/workflows/remove-experimental.yml
+++ b/.github/workflows/remove-experimental.yml
@@ -49,7 +49,8 @@ jobs:
           npm install
           
           # Function to get the stack status
-          get_stack_status(stack_name) {
+          get_stack_status() {
+            stack_name=$1
             aws cloudformation describe-stacks --stack-name "${stack_name}" --query 'Stacks[0].StackStatus' --output text 2> /dev/null
           }
           
@@ -60,7 +61,7 @@ jobs:
             config=$2
             echo "check if stack exists"
             # Check if the stack exists
-            STACK_EXISTS=$(get_stack_status(stack_name))
+            STACK_EXISTS=$(get_stack_status() "${stack_name}")
 
             echo "before while loop" 
             while [[ "${STACK_EXISTS}" == "CREATE_IN_PROGRESS" || "${STACK_EXISTS}" == "UPDATE_IN_PROGRESS" || "${STACK_EXISTS}" == "DELETE_IN_PROGRESS" ]]; do
