--- a/.github/workflows/remove-experimental.yml
+++ b/.github/workflows/remove-experimental.yml
@@ -48,44 +48,8 @@ jobs:
           npm install serverless -g
           npm install
           
-          # Function to get the stack status
-          get_stack_status() {
-            stack_name=$1
-            aws cloudformation describe-stacks --stack-name "${stack_name}" --query 'Stacks[0].StackStatus' --output text 2> /dev/null
-          }
-          
-          delete_stack() { 
-            echo "within delete stack"
-            stack_name=$1
-            echo "stack name is ${stack_name}"
-            config=$2
-            echo "check if stack exists"
-            # Check if the stack exists
-            STACK_EXISTS=$(get_stack_status() "${stack_name}")
-
-            echo "before while loop" 
-            while [[ "${STACK_EXISTS}" == "CREATE_IN_PROGRESS" || "${STACK_EXISTS}" == "UPDATE_IN_PROGRESS" || "${STACK_EXISTS}" == "DELETE_IN_PROGRESS" ]]; do
-              echo "Waiting for the stack '${stack_name}' to finish its ongoing operation..."
-              sleep 10
-              STACK_EXISTS=$(get_stack_status)
-            done
-
-            echo "if stack does not exists then nothing to delete" 
-            if [ -z "${STACK_EXISTS}" ]; then
-              echo "Stack '${stack_name}' does not exist. Nothing to delete."
-            else
-              echo "within stack exists and its not in in progress state delete the stack"
-              # Stack exists and is not in an "in progress" state, delete the stack
-              aws cloudformation delete-stack --stack-name "${stack_name}"
-              echo "Deleting the stack '${stack_name}'..."
-              serverless remove --stage dev${PR} --config "${config}" 
-              echo "Stack '${stack_name}' deleted successfully."
-            fi
-          end 
-         
-          echo "deleting stacks" 
-          delete_stack() cmcs-eregs-parser-dev${PR}, "./serverless-ecfr.yml"
-          delete_stack() cmcs-eregs-fr-parser-dev${PR}, "./serverless-fr.yml"
+          ./delete_cloudformation_stacks.sh cmcs-eregs-parser-dev${PR} $PR "./serverless-ecfr.yml"
+          ./delete_cloudformation_stacks.sh cmcs-eregs-fr-parser-dev${PR}, $PR "./serverless-fr.yml"
           popd
       # remove the regulations site
       - name: remove experimental regulations site server
