--- a/.github/workflows/remove-experimental.yml
+++ b/.github/workflows/remove-experimental.yml
@@ -44,17 +44,15 @@ jobs:
         env:
           PR: ${{ github.event.number }}
         run: |
-          echo 'within run now running pwd'
+          Echo 'within run now running pwd'
           echo `pwd`
           pushd solution/parser
           npm install serverless -g
           npm install
           echo `pwd`
-          chmod +x delete_cloudformation_stacks.sh 
-          ./delete_cloudformation_stacks.sh cmcs-eregs-parser-dev${PR} $PR "./serverless-ecfr.yml"
-          ./delete_cloudformation_stacks.sh cmcs-eregs-fr-parser-dev${PR}, $PR "./serverless-fr.yml"
-          ../delete_cloudformation_stacks.sh cmcs-eregs-parser-dev${PR} $PR "./serverless-ecfr.yml"
-          ../delete_cloudformation_stacks.sh cmcs-eregs-fr-parser-dev${PR}, $PR "./serverless-fr.yml"
+          chmod +x ./.github/workflows/delete_cloudformation_stacks.sh 
+          ./.github/workflows/delete_cloudformation_stacks.sh cmcs-eregs-parser-dev${PR} $PR "./serverless-ecfr.yml"
+          ./.github/workflows/delete_cloudformation_stacks.sh cmcs-eregs-fr-parser-dev${PR}, $PR "./serverless-fr.yml"
           popd
       # remove the regulations site
       - name: remove experimental regulations site server
