add code directly instead of file for now

--- a/.github/workflows/remove-experimental.yml
+++ b/.github/workflows/remove-experimental.yml
@@ -49,10 +49,37 @@ jobs:
           pushd solution/parser
           npm install serverless -g
           npm install
-          echo `pwd`
-          chmod +x ~/work/cmcs-eregulations/cmcs-eregulations/.github/workflows/delete_cloudformation_stacks.sh 
-          ~/work/cmcs-eregulations/cmcs-eregulations/.github/workflows/delete_cloudformation_stacks.sh cmcs-eregs-parser-dev${PR} $PR "./serverless-ecfr.yml"
-          ~/work/cmcs-eregulations/cmcs-eregulations/.github/workflows/delete_cloudformation_stacks.sh cmcs-eregs-fr-parser-dev${PR}, $PR "./serverless-fr.yml"
+
+          STACK_NAME="cmcs-eregs-parser-dev${PR}"
+ 
+          # Function to get the stack status
+          get_stack_status() {
+            aws cloudformation describe-stacks --stack-name "${STACK_NAME}" --query 'Stacks[0].StackStatus' --output text 2> /dev/null
+          }
+ 
+          # Check if the stack exists
+          STACK_EXISTS=$(get_stack_status)
+ 
+          while [[ "${STACK_EXISTS}" == "CREATE_IN_PROGRESS" || "${STACK_EXISTS}" == "UPDATE_IN_PROGRESS" || "${STACK_EXISTS}" == "DELETE_IN_PROGRESS" ]]; do
+            echo "Waiting for the stack '${STACK_NAME}' to finish its ongoing operation..."
+            sleep 10
+            STACK_EXISTS=$(get_stack_status)
+          done
+ 
+          if [ -z "${STACK_EXISTS}" ]; then
+            echo "Stack '${STACK_NAME}' does not exist. Nothing to delete."
+          else
+            # Stack exists and is not in an "in progress" state, delete the stack
+            echo "Deleting the stack '${STACK_NAME}'..."
+            serverless remove --stage dev${PR} --config ./serverless-ecfr.yml 
+            aws cloudformation wait stack-delete-complete --stack-name "${STACK_NAME}"
+            echo "Stack '${STACK_NAME}' deleted successfully."
+          fi
+          #chmod +x ~/work/cmcs-eregulations/cmcs-eregulations/.github/workflows/delete_cloudformation_stacks.sh 
+          #~/work/cmcs-eregulations/cmcs-eregulations/.github/workflows/delete_cloudformation_stacks.sh cmcs-eregs-parser-dev${PR} $PR "./serverless-ecfr.yml"
+          #~/work/cmcs-eregulations/cmcs-eregulations/.github/workflows/delete_cloudformation_stacks.sh cmcs-eregs-fr-parser-dev${PR}, $PR "./serverless-fr.yml"
+          serverless remove --stage dev${PR} --config ./serverless-fr.yml
+
           popd
       # remove the regulations site
       - name: remove experimental regulations site server
