--- a/.github/workflows/remove-experimental.yml
+++ b/.github/workflows/remove-experimental.yml
@@ -61,6 +61,7 @@ jobs:
         env:
           PR: ${{ github.event.number }}
         run: |
+          set -x
           pushd solution/backend
           npm install serverless -g
           npm install
