--- a/.github/workflows/remove-experimental.yml
+++ b/.github/workflows/remove-experimental.yml
@@ -61,18 +61,17 @@ jobs:
         env:
           PR: ${{ github.event.number }}
         run: |
-          set -x
           pushd solution/backend
           npm install serverless -g
           npm install
-          
+          # remove the database if its there. 
           if aws rds describe-db-instances --db-instance-identifier eregs >/dev/null 2>&1; then
             serverless invoke --config ./serverless-experimental.yml --function drop_database --stage dev${PR}
             echo "database dropped successfully"
           else
             echo "database for dev${PR} was not found"
           fi
-          ~/work/cmcs-eregulations/cmcs-eregulations/.github/workflows/delete_cloudformation_stacks.sh cmcs-eregs-site-dev${PR}, $PR "./serverless-experimental.yml"
+          ~/work/cmcs-eregulations/cmcs-eregulations/.github/workflows/delete_cloudformation_stacks.sh cmcs-eregs-site-dev${PR} $PR "./serverless-experimental.yml"
           popd
       # Remove the static assets
       - name: remove static assets
