--- a/solution/backend/serverless-experimental.yml
+++ b/solution/backend/serverless-experimental.yml
@@ -162,7 +162,9 @@ resources:
                        - ""
                        - - "arn:aws:s3:::"
                          - "Ref" : "ServerlessDeploymentBucket"
-
+                   Condition:
+                     Bool:
+                       aws:SecureTransport: "true"
 plugins:
   - serverless-wsgi
   - serverless-cloudfront-invalidate
