--- a/solution/backend/serverless-experimental.yml
+++ b/solution/backend/serverless-experimental.yml
@@ -164,7 +164,8 @@ resources:
                          - "Ref" : "ServerlessDeploymentBucket"
                    Condition:
                      Bool:
-                       aws:SecureTransport: true
+                       aws:SecureTransport: "true"
+
 plugins:
   - serverless-wsgi
   - serverless-cloudfront-invalidate
