--- a/solution/parser/serverless-fr.yml
+++ b/solution/parser/serverless-fr.yml
@@ -82,7 +82,9 @@ resources:
                        - ""
                        - - "arn:aws:s3:::"
                          - "Ref" : "ServerlessDeploymentBucket"
-
+                   Condition:
+                     Bool:
+                       aws:SecureTransport: "true"
     ServerlessSecurityGroup:
       Type: AWS::EC2::SecurityGroup
       Properties:
