--- a/solution/backend/serverless.yml
+++ b/solution/backend/serverless.yml
@@ -147,7 +147,7 @@ resources:
                          - "Ref" : "ServerlessDeploymentBucket"
                    Condition:
                      Bool:
-                       aws:SecureTransport: true
+                       aws:SecureTransport: false
     ServerlessSecurityGroup:
       Type: AWS::EC2::SecurityGroup
       Properties:
