--- a/solution/parser/serverless-ecfr.yml
+++ b/solution/parser/serverless-ecfr.yml
@@ -84,7 +84,7 @@ resources:
                          - "Ref" : "ServerlessDeploymentBucket"
                    Condition:
                      Bool:
-                       aws:SecureTransport: "true"
+                       aws:SecureTransport: "false"
 
     ServerlessSecurityGroup:
       Type: AWS::EC2::SecurityGroup
