--- a/solution/Dockerfile.template
+++ b/solution/Dockerfile.template
@@ -11,6 +11,7 @@ RUN pip install --no-cache-dir --upgrade pip setuptools \
     && pip install -r requirements.txt
 
 ENV SEARCHGOV_KEY=""
+ENV SEARCHGOV_SITE_NAME=""
 
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
 
