--- a/solution/backend/serverless-experimental.yml
+++ b/solution/backend/serverless-experimental.yml
@@ -27,6 +27,7 @@ provider:
     CUSTOM_URL: ${ssm:/eregulations/custom_url, ''}
     SURVEY_URL: ${ssm:/eregulations/survey_url}
     SEARCHGOV_KEY: ${ssm:/eregulations/searchgov/key}
+    SEARCHGOV_SITE_NAME: ${ssm:/eregulations/searchgov/site_name}
   vpc:
     securityGroupIds:
       - ${ssm:/eregulations/aws/securitygroupid}
