--- a/solution/ui/regulations/package.json
+++ b/solution/ui/regulations/package.json
@@ -3,7 +3,7 @@
   "description": "",
   "scripts": {
     "test-vue": "vitest --environment jsdom",
-    "test-vue-coverage": "vitest run --coverage",
+    "test-vue-coverage": "vitest --environment jsdom run --coverage",
     "css": "npx sass -I node_modules css/scss/main.scss ../../static-assets/regulations/css/main.css",
     "css-deploy": "npx sass -I node_modules css/scss/main-deploy.scss ../../static-assets/regulations/css/main.css",
     "watch-css": "npx sass --watch -I node_modules css/scss/main.scss ../../static-assets/regulations/css/main.css",
