fix make add title change for test

--- a/solution/Makefile
+++ b/solution/Makefile
@@ -161,8 +161,8 @@ test.vite:
 		npm run test-vue;
 test.vite.coverage:
 	cd ui/regulations;\
-		npm install;
-		npm run test-vue-coverage
+		npm install;\
+		npm run test-vue-coverage;
 		
 python.unittest:
 	docker-compose exec regulations python manage.py test
