--- a/solution/static-assets/serverless.yml
+++ b/solution/static-assets/serverless.yml
@@ -8,7 +8,7 @@ provider:
     blockPublicAccess: true
 
 custom:
-  stage: ${opt:stage, self:provider.stage}
+  vstage: ${opt:stage, self:provider.stage}
   s3Sync:
     - bucketName: eregs-${self:custom.stage}-site-assets
       localDir: ./regulations
