--- a/solution/ui/regulations/package.json
+++ b/solution/ui/regulations/package.json
@@ -2,6 +2,8 @@
   "name": "regulations",
   "description": "",
   "scripts": {
+    "test-vue": "vitest --environment jsdom",
+    "test-vue-coverage": "vitest --environment jsdom run --coverage",
     "css": "npx sass -I node_modules css/scss/main.scss ../../static-assets/regulations/css/main.css",
     "css-deploy": "npx sass -I node_modules css/scss/main-deploy.scss ../../static-assets/regulations/css/main.css",
     "watch-css": "npx sass --watch -I node_modules css/scss/main.scss ../../static-assets/regulations/css/main.css",
@@ -16,7 +18,10 @@
   "dependencies": {
     "@cmsgov/design-system": "^2.5.0",
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "@vitejs/plugin-vue2": "^2.2.0",
+    "@vue/test-utils": "^1.3.5",
     "export-from-json": "^1.6.0",
+    "flush-promises": "^1.0.2",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "react": "16.x",
@@ -36,6 +41,8 @@
     "@storybook/manager-webpack5": "^6.5.12",
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/vue": "^6.5.12",
+    "@testing-library/vue": "^5.9.0",
+    "@vitest/coverage-c8": "^0.31.1",
     "@vue/component-compiler": "^4.2.4",
     "babel-loader": "^8.2.2",
     "eslint": "^8.3.0",
@@ -44,12 +51,16 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-storybook": "^0.6.4",
     "eslint-plugin-vue": "^9.9.0",
-    "msw": "^0.47.0",
+    "happy-dom": "^9.18.3",
+    "jsdom": "^22.0.0",
+    "msw": "^1.2.1",
     "msw-storybook-addon": "^1.6.3",
     "prettier": "2.2.1",
     "sass-loader": "^13.0.2",
     "storybook-addon-sass-postcss": "^0.1.3",
-    "webpack": "^5.76.0"
+    "vitest": "^0.31.0",
+    "webpack": "^5.76.0",
+    "whatwg-fetch": "^3.6.2"
   },
   "msw": {
     "workerDirectory": "msw"
