see if it can find manage.py now

--- a/.github/workflows/deploy-experimental.yml
+++ b/.github/workflows/deploy-experimental.yml
@@ -327,4 +327,4 @@ jobs:
       # run Python unit tests
       - name: Run Python unit tests
         run: |
-          python manage.py test /home/runner/work/cmcs-eregulations/cmcs-eregulations/solution/backend/regulations/tests
+          python ./manage.py test
