update manage.py directory

--- a/.github/workflows/deploy-experimental.yml
+++ b/.github/workflows/deploy-experimental.yml
@@ -327,4 +327,4 @@ jobs:
       # run Python unit tests
       - name: Run Python unit tests
         run: |
-          python ./manage.py test
+          python manage.py test
