--- a/.github/workflows/deploy-experimental.yml
+++ b/.github/workflows/deploy-experimental.yml
@@ -321,9 +321,10 @@ jobs:
       # navigate to the backend directory
       - name: Navigate to backend directory
         run: |
-          cd solution/backend
+          echo *********($pwd)
+          cd app/src
 
       # run Python unit tests
       - name: Run Python unit tests
         run: |
-          pytest
+          pytest --df=cmcs-reguations.settings
