--- a/.github/workflows/deploy-experimental.yml
+++ b/.github/workflows/deploy-experimental.yml
@@ -318,13 +318,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r ./solution/static-assets/requirements.txt
-      # navigate to the backend directory
-      - name: Navigate to backend directory
-        run: |
-          echo "Current directory: $(pwd)"
-          cd app/src
 
       # run Python unit tests
       - name: Run Python unit tests
         run: |
-          pytest --df=cmcs-reguations.settings
+          pytest
