update pytest step

--- a/.github/workflows/deploy-experimental.yml
+++ b/.github/workflows/deploy-experimental.yml
@@ -316,7 +316,7 @@ jobs:
         run: |
           ls
           echo "Current directory: $(pwd)"
-          cd app/src
+          pushd solution/backend
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
