--- a/.github/workflows/deploy-experimental.yml
+++ b/.github/workflows/deploy-experimental.yml
@@ -126,7 +126,34 @@ jobs:
           serverless invoke --config ./serverless-experimental.yml --function populate_content --stage dev${PR}
           echo "url=$(cat output.log | grep -m1 'ANY -' | cut -c 9-)" >> $GITHUB_OUTPUT
           popd
-
+  test-python:
+    needs: [ deploy-django ]
+    runs-on: ubuntu-20.04
+    steps:
+      # checkout the code
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          submodules: true
+      # setup Python
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.8'
+      - name: Navigate to backend directory
+        run: |
+          ls
+          echo "Current directory: $(pwd)"
+          pushd solution/backend
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r ./solution/static-assets/requirements.txt
+      # run Python unit tests
+      - name: Run Python unit tests
+        run: |
+          working-directory: ./app
+          pytest
   build-and-deploy-vue:
     environment:
       name: "dev"
@@ -298,30 +325,3 @@ jobs:
         with:
           name: cypress-videos
           path: /home/runner/work/cmcs-eregulations/cmcs-eregulations/solution/ui/e2e/cypress/videos/*
-  test-python:
-    needs: [ deploy-go, deploy-django, build-and-deploy-vue ]
-    runs-on: ubuntu-20.04
-    steps:
-      # checkout the code
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          submodules: true
-      # setup Python
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.8'
-      - name: Navigate to backend directory
-        run: |
-          ls
-          echo "Current directory: $(pwd)"
-          pushd solution/backend
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r ./solution/static-assets/requirements.txt
-      # run Python unit tests
-      - name: Run Python unit tests
-        run: |
-          pytest
